Kubernetes Project/sba-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sba-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: simpleproject
          image: neelima1493/simpleprojectnew
          ports:
            - containerPort: 3000
